--- a/abstract.tex
+++ b/abstract.tex
@@ -11,7 +11,7 @@
 
 
 % 背景１：オンライン学習サービスを利用した個人最適化，データ蓄積に伴う学習効果分析の進展
-教育と情報技術の融合の象徴とも言えるアダプティブラーニングの躍進には．
+教育と情報技術の融合の象徴とも言えるアダプティブラーニングの躍進には，
 オンライン教育サービスの普及が背景にある．
 オンライン教育サービスは，
 サービスを利用する生徒の学習行動ログを収集することで，
@@ -54,17 +54,21 @@
 深層学習が学習した知識分類を抽出し，知識獲得予測に用いることで，
 人間が作成した既存の知識分類を用いる場合よりも高い精度が得られることが検証され，
 知識獲得の予測性において最適化された知識分類を，深層学習によって抽出できることが示された．
+また，抽出された知識分類を定量的・定性的に分析することにより，
+知識の内容的な関係性と，分類ごとの回答に関する情報量を最適に分配することが，知識獲得の予測性の向上に寄与することがわかった．
 
 % 考察
 この結果は，
 人間が認識しきれない，知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
-この手法を活用することにより，
-これまで人間が分類してきた既存の学問をより最適に構造化することで，
-生徒の学習効率を最大化し，また学問自体の発展も促す可能性を示唆している．
+この手法を活用することにより，これまで人間が分類してきた既存の学問体系をより最適に構造化することが可能になる．
+以上を踏まえて，本手法によって抽出される知識分類は，
+教材推薦システムへの適用を通して生徒の学習効率を向上させるという実用的な価値と，
+未成熟な学問の構造化に活用することで学問自体の発展を助けるという学術的な価値を持つことを論じ，
 さらに，研究の拡張として，
 より良質な知識分類を学習するための手法の改善案や，
 本手法の学習科学における適用の可能性，
 そして学習科学以外の分野への応用の可能性を考察した．
+%本手法によって抽出される知識分類は，教材推薦システムへの適用や未成熟な学問の構造化に適用することが可能で，実用的にも，学術的にも高い価値を持つと考えられ，また教育学に限らない多様な範囲に適用できる可能性もあり，汎用性が高いと考えられる．
 
 
 % まとめ
