--- a/chapter07.tex
+++ b/chapter07.tex
@@ -22,8 +22,9 @@
 複数科目を統合した知識獲得や，大学水準の知識獲得に関しては，検証実験を行う必要があることを述べた．
 
 本研究の成果の実用性については，教材推薦システムへの適用と学問体系の構造化の面から論じ，
-生徒の学習効率を向上させるという実用上の意義と，
-未発達の学問体系を構造化することで当該学問の発達に寄与するという学術的な意義を論じた．
+生徒の学習効率を向上させるという実用的な価値と，
+未成熟の学問体系を構造化することで当該学問の発達に寄与するという学術的な価値を論じた．
+
 
 \vvspace
 
