--- a/grad_thesis.tex
+++ b/grad_thesis.tex
@@ -53,7 +53,7 @@
 \Large 指導教員　松尾豊 特任准教授
 
 \vspace{0.6cm}
-\Large 東京大学工学部システム創成学科知能社会システムコース
+\Large 東京大学工学部システム創成学科\\知能社会システムコース
 
 \vspace{0.2cm}
 \Large 03-150984　中川大海
