--- a/abstract.tex
+++ b/abstract.tex
@@ -1,48 +1,25 @@
-% 導入：アダプティブラーニング，学習最適化のトレンド
-近年，教育と情報技術の融合が進む中で，アダプティブラーニングという言葉が注目されている．
-個人に最適化された学習内容の自動提供を実現するもので，その社会的影響の大きさから世界的に注目が集まっており，
-関連するスタートアップや大学での研究に，多額の資金が投入されている．
-% 個人最適化の歴史，学習科学の勃興
-学習内容を個人に最適化するという考え方自体は，決して新しいものではないが，
-教師のマンパワーに依存した従来の教育システムでは達成に障壁があった．
-すべての生徒に最適な学習を提供するには，
-現代の情報技術を活用して，生徒の学習過程を分析し，学習内容を決定するような，新たな教育システムが必要であり，
-このようなシステムを作り上げようとする動向は「学習科学」という研究分野として確立され，今日大きな注目を集めている．
-
-
-% 背景１：オンライン学習サービスを利用した個人最適化，データ蓄積に伴う学習効果分析の進展
-教育と情報技術の融合の象徴とも言えるアダプティブラーニングの躍進には，
-オンライン教育サービスの普及が背景にある．
-オンライン教育サービスは，
-サービスを利用する生徒の学習行動ログを収集することで，
-これまで困難であった大規模な学習効果分析を可能にしたことに加え，
-生徒が個人で利用するという形態を活用し，
-研究成果を元に最適設計された学習内容を個人個人に提供することを容易にした．
-
+近年，教育と情報技術の融合が進み，オンライン教育サービスを始めとする新たな教育形態が普及する中で，
+教育の個人最適化に関する研究が活発化している．
+従来の学校教育は一対多の一斉授業形式であり，生徒の間で習熟度に差が出るという問題があったが，
+オンライン教育サービスでは，生徒の学習行動ログを元に学習効果の分析を行い，それを元に設計された学習内容を個人に提供することで，学習を個人に最適化することが可能になった．
+中でも，生徒の学習行動を元に知識ごとの習熟の度合いを予測する知識獲得予測の研究は，
+学習行動ログを蓄積・分析し，その研究成果を実証できるオンライン教育サービスの性質と相まって，研究が活発化している．
 
 % 背景２：深層学習の高まり，人間による解釈や概念の再構築
 一方，近年，教育に限らない多くの研究領域で，深層学習が注目されている．
-従来の機械学習では，人間が問題の特徴を捉えて素性を設計する必要があったが，
-深層学習では，目的に応じた素性をデータから自動で学習することが可能になった．
-既存の機械学習の手法を上回る性能を得られることに加え，
-人間が認識できないようなデータの複雑な特徴を捉えることが可能になったため，
+深層学習は，既存の機械学習の手法を上回る性能を得られることに加え，
+人間が認識できないようなデータの潜在的な特徴表現を捉えることが可能になったため，
 これまで人間が作り上げてきた概念を大きく塗り替える可能性を秘めている．
 % 深層学習＆教育
-こうした深層学習の技術は，学習効果分析にも活用が期待されており，
-生徒の知識状態を正しく把握することで，最適な学習内容を特定することを目的とする知識獲得予測の研究に，
-深層学習を適用した例も報告されている．
+こうした深層学習の技術は，学習効果分析にも活用が期待されており，知識獲得予測の研究に深層学習を適用した例も報告されている．
 
 % 問題意識：学習効率の最適化という最終目標，知識獲得の予測アルゴリズム改良だけでなく，知識分類の定義自体を再構築できるはず
 しかし，こうした知識獲得予測の最先端の研究においても，
 予測アルゴリズムの部分に深層学習を適用しているものの，
 獲得の対象とされる「知識」は事前に人間が作成した知識分類によって定義され，所与のものとされている．
-人間が作成した知識分類は，伝統的な枠組みや可読性といった定性的な尺度で作成されたものが多く，
-実際の生徒の知識獲得の予測という定量的な文脈において最適なものとなっている根拠はないため，
-それを用いた知識獲得予測自体も最適なものとはいえない．
-大規模データから潜在的な特徴を自動で学習できる深層学習を活用すれば，
-人間が認識できないような，知識獲得に潜む複雑な特徴を反映した，最適な知識分類を作成できる可能性は高く，
-生徒の学習効率を最適化するという最終的な目標を真に達成するには，
-知識分類自体も深層学習によって最適化される必要があるといえる．
+人間が作成した知識分類は定性的な尺度で作成されたものが多く，実際の生徒の知識獲得の予測という定量的な文脈において最適なものとなっている根拠はないため，それを用いた知識獲得予測自体も最適なものとはいえない．
+大規模データから潜在的な特徴を自動で学習できる深層学習を活用すれば，人間が認識できないような，知識獲得に潜む複雑な特徴を反映した，最適な知識分類表現を獲得できる可能性は高く，
+生徒の学習効率を最適化するという最終的な目標を真に達成するには，知識分類自体も深層学習によって最適化される必要があるといえる．
 
 
 % 本論文の目的
@@ -51,18 +28,16 @@
 知識獲得予測を行う上で最適な知識分類を，深層学習に自動的に学習させ，抽出することを目的とする．
 
 実験の結果，
-深層学習が学習した知識分類を抽出し，知識獲得予測に用いることで，
-人間が作成した既存の知識分類を用いる場合よりも高い精度が得られることが検証され，
-知識獲得の予測性において最適化された知識分類を，深層学習によって抽出できることが示された．
+知識獲得の予測性において最適化された知識分類を，深層学習によって抽出できることが示され，
 また，抽出された知識分類を定量的・定性的に分析することにより，
-知識の内容的な関係性と，分類ごとの回答に関する情報量を最適に分配することが，知識獲得の予測性の向上に寄与することがわかった．
+知識の分野的関係性と回答に関する情報量の最適な分配が，知識獲得の予測性の向上に寄与することが検証された．
 
 % 考察
 この結果は，
 人間が認識しきれない，知識獲得の複雑な過程を説明する表現を，深層学習が獲得したことを示しており，
 この手法を活用することにより，これまで人間が分類してきた既存の学問体系をより最適に構造化することが可能になる．
-以上を踏まえて，本手法によって抽出される知識分類は，
-教材推薦システムへの適用を通して生徒の学習効率を向上させるという実用的な価値と，
+以上を踏まえ，本研究が，
+教材推薦システムへの適用を通して生徒の学習効率を向上させるという社会的な価値と，
 未成熟な学問の構造化に活用することで学問自体の発展を助けるという学術的な価値を持つことを論じ，
 さらに，研究の拡張として，
 より良質な知識分類を学習するための手法の改善案や，
