--- a/biblio.bib
+++ b/biblio.bib
@@ -538,12 +538,12 @@ and the 7th International Joint Conference on Natural Language Processing},
   year={2013},
   organization={Springer}
 }
-@inproceedings{falakmasir2015spectral,
-  title={Spectral bayesian knowledge tracing},
-  author={FALAKMASIR, MH and Yudelson, Michael and Ritter, Steve and Koedinger, Ken},
-  booktitle={Proceedings of the 8th International Conference on Educational Data Mining., OC Santos, JG Boticario, C. Romero, M. Pechenizkiy, A. Merceron, P. Mitros, JM Luna, C. Mihaescu, P. Moreno, A. Hershkovitz, S. Ventura, and M. Desmarais, Eds. Madrid, Spain},
-  pages={360--364},
-  year={2015}
+@article{falakmasir2015spectral,
+  title={Spectral Bayesian Knowledge Tracing.},
+  author={Falakmasir, Mohammad and Yudelson, Michael and Ritter, Steve and Koedinger, Ken},
+  journal={International Educational Data Mining Society},
+  year={2015},
+  publisher={ERIC}
 }
 @article{srivastava2014dropout,
   title={Dropout: A simple way to prevent neural networks from overfitting},
@@ -689,7 +689,7 @@ and the 7th International Joint Conference on Natural Language Processing},
 
 @article{三宅なほみ2002学習環境のデザイン実験,
   title={学習環境のデザイン実験 学習科学と認知科学},
-  author={三宅なほみ and 三宅芳雄 and 白水始},
+  author={三宅なほみ, 三宅芳雄, 白水始},
   journal={認知科学},
   volume={9},
   number={3},
@@ -700,7 +700,7 @@ and the 7th International Joint Conference on Natural Language Processing},
 
 @article{白水始2014学習科学の新展開,
   title={学習科学の新展開},
-  author={白水始 and 三宅なほみ and 益川弘如},
+  author={白水始, 三宅なほみ, 益川弘如},
   journal={認知科学},
   volume={21},
   number={2},
