--- a/chapter04.tex
+++ b/chapter04.tex
@@ -57,8 +57,8 @@ Deep Knowledge Tracing\cite{piech2015deep}を始めとする多くのKnowledge T
 % 概観
 生徒が解く問題(problem)には，1つ以上の知識タグ(skill)が紐付いている．
 「skill\_builder」のデータセットには，4,217人の生徒の，124の知識タグが紐づく26,688の問題に対する，401,756の回答ログが含まれている．
-なお，「skill\_builder」のデータセットは，行の重複などによって大幅な不備が指摘されたため訂正版が提供されており，
-それ以前の研究結果は信憑性が低い．本研究では，訂正後のデータセットを用いている．
+%なお，「skill\_builder」のデータセットは，行の重複などによって大幅な不備が指摘されたため訂正版が提供されており，
+%それ以前の研究結果は信憑性が低い．本研究では，訂正後のデータセットを用いている．
 
 
 \subsection{データの抽出}
