--- a/chapter07.tex
+++ b/chapter07.tex
@@ -9,13 +9,13 @@
 本論文では，
 既存の知識獲得予測における問題として，
 人間が作成した知識分類を利用していることを指摘し，
-提案手法を適用することによって，
+深層学習を用いて知識獲得予測の文脈で知識分類を学習させる提案手法によって，
 知識獲得の予測性において最適化された知識分類を抽出できることを検証した．
 また，抽出された知識分類を定量的・定性的に分析することにより，
-知識の内容的な関係性と，分類ごとの回答に関する情報量を最適に分配することが，知識獲得の予測性の向上に寄与することがわかった．
+知識の分野的関係性と回答に関する情報量の最適な分配が，知識獲得の予測性の向上に寄与することがわかった．
 \vvspace
 
-実験結果を踏まえ，本手法の汎用性と成果の実用性についての考察を行った，
+実験結果を踏まえ，手法の汎用性と研究成果の実用性についての考察を行った，
 
 本手法の汎用性については，多様なデータへの適用可能性の面から論じ，
 既存の手法では困難だった，他の科目やオンライン教育サービスにも適用できる可能性がある一方，
@@ -36,7 +36,7 @@
 人間行動に関する多様な知見を発見できる可能性を論じた．
 \vvspace
 
-本研究は．
+本研究は，
 教育と情報技術の融合の進展やオンライン教育サービスの普及，教育分野における大規模分析の活発化や深層学習の躍進など，
 ここ数年の多様な領域の進展によって初めて可能になったものである．
 本研究が，あらゆる学問における生徒の学習効率を向上させ，また，新たな教育システムの構築や学問の発達，そして人間の学習や知識の解明につながると信じている．
